# From-Scratch

./: README.md
object-detection-from-scratch/: README.md  object_detection_from_scratch.ipynb  pyproject.toml
